--- a/media.css
+++ b/media.css
@@ -51,7 +51,7 @@
 
 /* --------------------410px------------------------------ */
 
-@media screen and (max-width:410px){
+@media screen and (max-width:410px) and (max-height:800px){
     h2{
         margin-top: 1rem;
         font-size: 1.5rem;
@@ -91,5 +91,12 @@
     }
     .score{
         text-align: center;
+    }
+}
+
+@media screen and (max-width:410px){
+    h2{
+        margin-top: 1rem;
+        font-size: 1.5rem;
     }
 }
